[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/GameUI.gd" id="1_gameui"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gameui")

[node name="PhaseLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 36.0
text = "Phase: Deployment"

[node name="TurnLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 66.0
text = "Turn: Player 1"

[node name="NextPhaseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 70.0
offset_right = 100.0
offset_bottom = 101.0
text = "Next Phase"

[connection signal="pressed" from="NextPhaseButton" to="." method="_on_next_phase_button_pressed"] 